<resources>
    <string name="app_name">WantsApp</string>
    <string name="username">Username</string>
    <string name="password">Password (8–12)</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="_public">Public</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="success_log">Successful Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_email_address">Confirm Email Address</string>
    <string name="confirm_password_8_12">Confirm Password (8–12)</string>
    <string name="missing_fName">Missing First Name</string>
    <string name="miss_lName">Missing Last Name</string>
    <string name="invalid_num">Enter Valid #</string>
    <string name="miss_email">Missing Email</string>
    <string name="miss_uName">Missing Username</string>
    <string name="invalid_pass">Invalid Password</string>
    <string name="sign_up_for_wants">Sign Up For Wants</string>
    <string name="my_wants">My Wants</string>
    <string name="placeholder">Placeholder</string>
    <string name="edit_button">Edit Button</string>
    <string name="locations">Locations</string>
    <string name="item_title">Item Title</string>
    <string name="desc">Description</string>
    <string name="kinda_want">Kinda Want</string>
    <string name="want">Want</string>
    <string name="really_want">Really Want</string>
    <string name="i_want_it">I Want It</string>
    <string name="price">Price: </string>
    <string name="_$">$</string>
    <string name="need_name">Need Item Name</string>
    <string name="unknown">Unknown</string>
    <string name="new_wants">New Wants</string>
    <string name="select_list">Select List</string>
    <string name="db_error">Database Error</string>
    <string name="new_list">(Make New List)</string>
    <string name="enter_a_new_list_name">Enter a new list name</string>
    <string name="data_failed">Failed to read data</string>
    <string name="delete_item_button">Delete item button</string>
    <string name="_private">private</string>
    <string name="signed_out">You have been signed out</string>
    <string name="no_wants">No Wants</string>
    <string name="email_username_phone">Email, Username, Phone</string>
    <string name="users_profile_pic">The users profile pic</string>
    <string name="search_for_users">Search For Users</string>
    <string name="contacts">Contacts</string>
    <string name="search">Search</string>
    <string name="my_contacts">My Contacts</string>
    <string name="sign_up_offer_message">Sign up for WantsApp so you can add contacts to your profile and start receiving all the great benefits.</string>
    <string name="dont_want">Don\'t Want</string>
    <string name="sign_me_up">Sign me up</string>
    <string name="sure_to_remove_message">Are you sure you want to remove this item?</string>
    <string name="caution">Caution</string>
    <string name="i_want">I want</string>
    <string name="sort_by">Sort By</string>
    <string name="extra_information">Extra Information</string>
    <string name="kinda_want_plus">kinda Want+</string>
    <string name="want_plus">Want+</string>
    <string name="sort">Sort</string>
    <string name="showing">Showing</string>
    <string name="enter_message">Enter Message</string>
    <string name="sign_out_qmark">Sign out?</string>
    <string name="back_button_message">If you wish to go back to the log in screen you will be signed out.  Do you wish to sign out and return to the log in screen?</string>
    <string name="no_wants_in_list">No Wants In List</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_message">Do you want to sign out and return to the log in screen?</string>
    <string name="no_users_found">No Users Found</string>
    <string name="email_no_match">Emails do not match</string>
    <string name="pass_no_match">Passwords do not match</string>
    <string name="no_contacts">No Contacts</string>
    <string name="my_contact">My Contact</string>
    <string name="list_is_private">This list is public</string>
    <string name="list_is_public">This list is public</string>
    <string name="_added_to_contacts">added to contacts</string>
    <item type="id" name="object" />
    <item type="id" name="view" />
</resources>
