<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_light"
        android:layout_alignParentTop="true"
        android:paddingBottom="15dp"
        />

    <TextView
        android:id="@+id/gifts_for_contact_EmptylistView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_contacts"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@+id/tabBar"
        android:gravity="center"
        android:textSize="24sp"
        android:visibility="gone"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_light"
        android:id="@+id/tabBar"
        android:focusable="false"
        android:layout_alignParentBottom="true">
        <Button
            android:textColorHighlight="@color/colorPrimaryDark"
            android:selectAllOnFocus="true"
            android:text="@string/my_wants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/barButton1"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/buttonshape_signup"/>
        <Button
            android:text="@string/contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/barButton2"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/buttonshape_signup"/>
        <Button
            android:text="@string/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/barButton3"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/buttonshape_signup"/>
    </LinearLayout>


</RelativeLayout>