<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_light"
        android:layout_alignParentTop="true"
        android:id="@+id/linLay1">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/search_bar"
            android:layout_weight="0.8"
            android:hint="@string/email_username_phone"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@android:drawable/ic_menu_search"
            android:background="@color/background_light"/>

    </LinearLayout>




<ListView
    android:id="@+id/listView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:layout_below="@+id/linLay1"
    android:layout_above="@+id/tabBar"
    android:paddingBottom="15dp"
    />
    <TextView
        android:id="@+id/gifts_for_contact_EmptylistView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_users_found"
        android:layout_below="@+id/linLay1"
        android:background="@color/background_light"
        android:gravity="center"
        android:textSize="24sp"
        android:visibility="gone"
        android:layout_above="@+id/tabBar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_light"
        android:id="@+id/tabBar"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:textColorHighlight="@color/colorPrimaryDark"
            android:selectAllOnFocus="true"
            android:text="@string/my_wants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/barButton1"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/buttonshape_signup"/>
        <Button
            android:text="@string/contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/barButton2"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/buttonshape_signup"/>
        <Button
            android:text="@string/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/barButton3"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/buttonshape_signup"/>
    </LinearLayout>


</RelativeLayout>