<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/main_linearLayout1"
        android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/main_linearLayout"
        android:layout_weight="0.7"
        >


        <TextView
            android:id="@+id/title_giftsCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:layout_marginTop="2dp"
            android:layout_marginStart="20dp"
            android:focusable="false"
            android:textSize="20sp"/>

    <TextView
        android:id="@+id/price_giftsCell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:focusable="false"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:gravity="end"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/priority_color_view"
        android:focusable="false"
        />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/itemDetailsView"
        android:background="@color/background_light2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/closeButton"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
                android:background="@color/background_light"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="17sp"
                android:textAlignment="textEnd"
                android:layout_marginEnd="35dp"
                android:layout_marginTop="15dp"
                android:id="@+id/priority_level_TextView"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/locations_layout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locations"
                android:textSize="17sp"
                android:textAlignment="textStart"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/extraInfo_layout"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extra_information"
                android:textSize="17sp"
                android:textAlignment="textStart"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>